--- a/comp_sec_messenger/Cargo.toml
+++ b/comp_sec_messenger/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex = "0.4.3"
 iced = "0.12.1"
+ring = "0.17.8"
