--- a/comp_sec_messenger/Cargo.toml
+++ b/comp_sec_messenger/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aead = "0.5.2"
+digest = "0.10.7"
 hex = "0.4.3"
 iced = "0.12.1"
 ring = "0.17.8"
