--- a/comp_sec_messenger/Cargo.toml
+++ b/comp_sec_messenger/Cargo.toml
@@ -2,10 +2,11 @@
 name = "comp_sec_messenger"
 version = "0.1.0"
 edition = "2021"
+default-run = "gui"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 hex = "0.4.3"
-iced = "0.12.1"
+iced = "0.4.0"
 ring = "0.17.8"
